--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.5",
+    "vuetify-snackbars": "^1.0.12",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
