--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mdi/font": "^7.1.96",
     "axios": "^1.3.4",
     "pinia": "^2.0.28",
+    "swrv": "^1.0.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vue-sse": "^2.5.2",
     "vuetify": "^3.1.5",
     "vuetify-snackbars": "^1.0.12",
     "vuex": "^4.0.2"
