--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
+    "vue-native-websocket-vue3": "^3.1.7",
     "vue-router": "^4.1.6",
     "vue-sse": "^2.5.2",
     "vuetify": "^3.1.5",
