--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.1.96",
     "axios": "^1.3.4",
     "pinia": "^2.0.28",
+    "secure-ls": "^1.2.6",
     "swrv": "^1.0.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
@@ -23,7 +24,8 @@
     "vue-sse": "^2.5.2",
     "vuetify": "^3.1.5",
     "vuetify-snackbars": "^1.0.12",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
