--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/font": "^7.1.96",
     "axios": "^1.3.4",
     "pinia": "^2.0.28",
+    "sass": "^1.58.3",
     "secure-ls": "^1.2.6",
     "swrv": "^1.0.3",
     "vite-plugin-vuetify": "^1.0.2",
