--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
-VITE_APP_API_URL=http://192.168.1.57:8169/api
+VITE_APP_API_URL=http://192.168.1.57:8169/checker
 VITE_APP_STORAGE_URL=http://192.168.1.57:8169
-
+VITE_APP_WEBSOCKETS_KEY=local
+VITE_APP_WEBSOCKETS_SERVER=127.0.0.1
