--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "pinia": "^2.0.28",
     "sass": "^1.58.3",
     "secure-ls": "^1.2.6",
-    "swrv": "^1.0.3",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.45",
     "vue-axios": "^3.5.2",
     "vue-native-websocket-vue3": "^3.1.7",
     "vue-router": "^4.1.6",
     "vue-sse": "^2.5.2",
+    "vue-sweetalert2": "^5.0.5",
     "vuetify": "^3.1.5",
     "vuetify-snackbars": "^1.0.12",
     "vuex": "^4.0.2",
